objects/ACCobj3__c.object
<CustomObject>
    <description>test12</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Email</type>
    </fields>
    <label>ACCobj3</label>
    <nameField>
        <label>ACCobj3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCobj3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>